Add support for CDN front URL configuration for storage providers (#1452)
* add support for CDN front URL configuration for storage providers

* remove check if storage service is enabled to support mirrors

* clarify UrlUtil.createURI method

* initialize service map by default

* fix cdn javadoc wrt configuration